{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Land",
            "id": "92f19d11-0a7d-4b6c-beae-34a62992bfd9",
            "actions": [
                {
                    "name": "Move_X",
                    "type": "Value",
                    "id": "47b8e26c-cf64-4f53-a85a-cc3909462d13",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "694fe961-544a-44d4-a167-82384b789c91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8ae60bcd-c3bb-48c1-b6dd-303db4637455",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move_Y",
                    "type": "Value",
                    "id": "39d9356c-8ed3-4d3e-9be5-a92ead441681",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack_1",
                    "type": "Button",
                    "id": "713c7acf-e3b1-4ca8-b9d8-235e44b892c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch_Weapon",
                    "type": "Button",
                    "id": "c19de384-8b3f-42cd-9456-00291368a7cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Switch_Character",
                    "type": "Button",
                    "id": "778b6611-2b4b-42d6-bc74-07f4f8d8183e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "3df47a56-9ae0-40c4-a666-e69e7f643ad3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_X",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "058569dc-d357-45b6-9171-2c8828a6e99d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_X",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "884f0e2a-d9fc-4704-a0d8-a4e0869d8a22",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_X",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LeftArrow/RightArrow",
                    "id": "e96b7fe1-a2ff-403b-9040-9d38d3ec198e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_X",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3d68377b-6237-47dc-95c1-cde5e049e34e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_X",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ea932f7a-db3e-453a-ae1a-d8c0e08f2ead",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_X",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "51478924-e0ac-4915-950c-e5fa830bab0a",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4650e1c4-cf84-4207-82ba-c1dc6563d591",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WS",
                    "id": "d3c1b7c0-eac0-4f81-a567-f015d1b2a243",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Y",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b0241ff1-e1a2-4da0-bdb7-c012850e171d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Y",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e9399d76-a5a3-4e6a-9456-6d74b6f94be6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Y",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down/UPArrow",
                    "id": "ed30ae02-e33b-429a-ac65-ac9bae728d80",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Y",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b5501dac-75cc-4ccf-8588-48693f77eb58",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Y",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "cf88ba3f-2f9a-4df9-8da6-a98016e630b9",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move_Y",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "20162c99-8d83-451f-a522-8d81283face1",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9020dd39-771c-4f0f-bec6-ad0691cfae83",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch_Weapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96862620-e9c1-4001-9f04-94413f02051c",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Switch_Character",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Water",
            "id": "270d2165-0b22-4aee-b0a1-da7dec2e1978",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "076c8238-61b3-49d4-897e-e0dac9605fff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "43c83eb0-ad01-4160-870c-dbb7d29aec3d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "64768c5b-7924-46d1-9930-d0354bfcfcc3",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "1564b7d5-01a6-44d6-8054-18898dfb87ff",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1401904f-96c7-41f4-9fe1-63088ce0574d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}